--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <p>Long before hacking became associated with cybercrime and digital espionage, early hacker communities embraced a distinct set of ethical values. These values were not written laws but cultural norms shared among hobbyists, students, phone-phreakers, and early computer enthusiasts. Their philosophy is best captured in The Hacker Manifesto (1986), published in Phrack by the hacker known as The Mentor. In it, he describes hacking as a search for knowledge, a curiosity about how systems work, and a refusal to accept arbitrary restrictions on information. The Manifesto rejects the idea that education, intelligence, or opportunity should depend on class, wealth, or credentials. Skills, not status, were what mattered.</p>
         
         <figure>
-            <img src="manifesto-screen.gif" alt="Screenshot of the original Hacker Manifesto on a BBS terminal">
+            <img src="manifesto-screen.jpg" alt="Screenshot of the original Hacker Manifesto on a BBS terminal">
             <figcaption>[FIG.2]: "The Conscience of a Hacker" (1986) as seen on a Bulletin Board System</figcaption>
         </figure>
 
@@ -242,7 +242,7 @@
         <p>At its core, Right-to-Repair embodies the bazaar model Raymond celebrates: distributed knowledge, community collaboration, and freedom from centralized control.</p>
 
         <figure>
-            <img src="iphone-repair.jpg" alt="A disassembled modern smartphone">
+            <img src="iphone-repair.gif" alt="A disassembled modern smartphone">
             <figcaption>[FIG.3]: Modern "Tinkering": Disassembling proprietary hardware to reclaim ownership</figcaption>
         </figure>
 
