--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         }
         nav a {
             margin: 0 15px;
-            color: #00ffff;
+            color: #ff0000;
             text-decoration: none;
             font-weight: bold;
         }
         nav a:hover {
-            background-color: #00ffff;
+            background-color: #ff0000;
             color: #000;
         }
 
