--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             display: block;
             margin: 0 auto 10px auto;
             border: 2px dashed #00ff00; /* Green dashed border */
-            
+            color: #ffffff;
         }
 
         figcaption {
