--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             height: auto;
             display: block;
             margin: 0 auto 10px auto;
-            border: 2px dashed #00ff00; /* Green dashed border */
-            color: #ffffff;
+            border: 2px dashed #ffffff; /* Green dashed border */
+            color: #ffffff; /* Allows colored images */
         }
 
         figcaption {
