--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <ul>
             <li>Instead of fighting closed mainframes, users fight locked-down consumer electronics.</li>
             <li>Instead of battling for open networks, they battle for privacy and data ownership.</li>
-            <li>Instead of being portrayed as cool outlaws, activists are often cast as security risks.</li>
+            <li>Instead of being portrayed as cool outlaws, activists are often framed by manufacturers as "security risks" or copyright violators.</li>
         </ul>
         <p>The transformation of the hacker figure reflects the transformation of the digital world itself.</p>
         
@@ -274,7 +274,7 @@
 <section id="sources">
         <h2>Sources & Works Cited</h2>
         <ul class="sources-list">
-            <li><strong>Bernal, P. A. (2021).</strong> <em>The Cultural Construction of Cybersecurity</em>.</li>
+            <li><strong>Bernal, P. A. (2021).</strong> <em>The Cultural Construction of Cybersecurity: Digital Threats and Dangerous Rhetoric.</em>.</li>
             <li><strong>Coleman, G. (2012).</strong> <em>Coding Freedom: The Ethics and Aesthetics of Hacking</em>. Princeton University Press.</li>
             <li><strong>Platt, C. (1994).</strong> "Hackers: Threat or Menace?" <em>WIRED</em>.</li>
             <li><strong>Raymond, E. S. (1998).</strong> <em>The Cathedral and the Bazaar</em>. O'Reilly Media.</li>
@@ -283,6 +283,7 @@
             <li><strong>Thomas, D. (2002).</strong> <em>Hacker Culture</em>. University of Minnesota Press.</li>
             <li><strong>Turkle, S. (1995).</strong> <em>Life on the Screen: Identity in the Age of the Internet</em>. Simon & Schuster.</li>
             <li><strong>Winkler, I. (Director). (1995).</strong> <em>The Net</em> [Film]. Columbia Pictures.</li>
+            <li><strong>Lopatto, E. (2024, February 15).</strong> "Apple is lobbying against Oregon’s right-to-repair bill." <em>The Verge.</li>
         </ul>
     </section>
 
